Correçoes nas classes de user e client para salvamento correto no banco de dados